Trying to fix the button highlight on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,10 @@ button {
   }
 }
 
+button:focus {
+  outline: none;
+}
+
 button::after {
   content: '';
   position: absolute;
